# feedback-neo4j-neomodel

./: README.md  main.py  pyproject.toml  test.env
models/: __init__.py  ex_my_node.py  movie.py  person.py  relationship.py
scripts/: create_db.py
