[tool.poetry]
name = "ws-neo4j"
version = "0.1.0"
description = ""
authors = ["Devlink42"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
neomodel = ">=5.4.5,<6.0.0"
poetry-core = ">=2.0.0,<3.0.0"
python-dotenv = "^1.1.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
